[package]
name = "origamid-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
reqwest = { version = "0.11.16", features = ["json"] }
soup = "0.5.1"
terminal-menu = "2.0.5"
tokio = { version = "1.28.0", features = ["full"] }
